fix: height for message box on small mobiles

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -153,7 +153,7 @@ p {
     text-shadow: rgb(112, 128, 144) 4px 4px;
     text-align: center;
     font-size: 200%;
-    margin-top: 15%;
+    margin-top: 12.5%;
  }
 
   /* Style for form */
@@ -265,6 +265,9 @@ footer i:hover{
      input[type=text], [type=email] , [type=tel], textarea {
       width: 100%;
      }
+     .message {
+       height: 7rem;
+     }
      input[type=submit] {
        left: 2px;
      }
@@ -314,6 +317,7 @@ footer i:hover{
       }
      }
    /* Media query for larger devices */
+
     @media screen and (min-width: 2000px) and (max-width: 3000px){
       h1 {
         font-size: 500%;
